modified:   battleship.js 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,13 @@ div#messageArea {
     top: 0px;
     left: 0px;
     color: rgb(83, 175, 19);
-}/*
+}
 .hit {
     background: url("ship.png") no-repeat center center;
 }
 .miss {
     background: url("miss.png") no-repeat center center;
-}*/
+}
 table {
     border-spacing: 0px;
     /* could use border-collapse instead */
